tests/NormalTests/paczka1/fuzzy1/51843829.err
Error in line 3: S778 S549 8,2
Error in line 1: xEsDo S778 19,2
Error in line 6: S778 S778 9,4
Error in line 27: S778 S504 -2,8
Error in line 22: S778 S504 30,2
